Skrur på konsumering av midlertidig alene, slik at bruker får dittNav varsel

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -11,7 +11,7 @@ topic:
     omp-utvidet-rett:
       bryter: false
     omp-midlertidig-alene:
-      bryter: false
+      bryter: true
 
 management:
   endpoint:
