Utvider tjenesten til å konsumere cleanup melding fra topic privat-omsorgsdager-melding-cleanup. Lager beskjedproperti for de ulike type overføring.

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -12,6 +12,8 @@ topic:
       bryter: false
     omp-midlertidig-alene:
       bryter: true
+    omd-melding:
+      bryter: false
 
 management:
   endpoint:
