Skrur på konsumering av omsorgsdager-melding i prod-gcp...

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -13,7 +13,7 @@ topic:
     omp-midlertidig-alene:
       bryter: true
     omd-melding:
-      bryter: false
+      bryter: true
 
 management:
   endpoint:
