--- a/dependabot/build.gradle
+++ b/dependabot/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testCompile 'org.awaitility:awaitility-kotlin:4.0.3'
     testCompile 'com.willowtreeapps.assertk:assertk-jvm:0.23'
     testCompile 'com.ninja-squad:springmockk:2.0.3'
-    testCompile 'io.mockk:mockk:1.10.3-jdk8'
+    testCompile 'io.mockk:mockk:1.10.4'
     testCompile 'no.nav.security:token-validation-spring:1.1.5'
     testCompile 'org.springframework.retry:spring-retry:1.3.0'
     testCompile 'io.springfox:springfox-boot-starter:3.0.0'
@@ -22,5 +22,5 @@ dependencies {
     testCompile 'com.vladmihalcea:hibernate-types-52:2.10.1'
     testCompile 'org.json:json:20201115'
     testCompile 'org.zalando:problem-spring-web-starter:0.26.2'
-    testCompile 'com.google.guava:guava:12.0'
+    testCompile 'com.google.guava:guava:23.0'
 }
