Upgrades dependencies. Closes #40 Closes #42
Erstatter deprecated pakker med nye.
Foreløpig commit.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -12,9 +12,9 @@ no.nav:
     jwt:
       issuer:
         loginservice:
-          discoveryUrl: http://metadata
+          discoveryurl: http://localhost:${mock-oauth2-server.port}/loginservice/.well-known/openid-configuration
           accepted_audience: aud-localhost
-          cookie_name: localhost-idtoken
+          cookie_name: loginservice-idtoken
     cors:
       allowed-origins: http://localhost:8080
 
@@ -46,3 +46,5 @@ spring:
       auto-offset-reset: earliest
 wiremock:
   reset-mappings-after-each-test: true
+  server:
+    port: 8888
