--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,3 +1,5 @@
+
+
 no.nav:
   apigw:
     apikey: test-key
@@ -14,7 +16,7 @@ no.nav:
         loginservice:
           discoveryurl: http://localhost:${mock-oauth2-server.port}/loginservice/.well-known/openid-configuration
           accepted_audience: aud-localhost
-          cookie_name: loginservice-idtoken
+          cookie_name: selvbetjening-idtoken
     cors:
       allowed-origins: http://localhost:8080
 
