--- a/dependabot/build.gradle
+++ b/dependabot/build.gradle
@@ -1,25 +1,26 @@
 // Do not edit manually! This file was created by the 'createDependabotFile' task defined in the root build.gradle.kts file.
 dependencies {
-    compile 'no.nav.security:token-validation-spring:1.1.5'
+    compile 'no.nav.security:token-validation-spring:1.3.2'
     compile 'org.springframework.retry:spring-retry:1.3.0'
     compile 'io.springfox:springfox-boot-starter:3.0.0'
-    compile 'net.logstash.logback:logstash-logback-encoder:6.5'
-    compile 'com.vladmihalcea:hibernate-types-52:2.10.1'
+    compile 'net.logstash.logback:logstash-logback-encoder:6.6'
+    compile 'com.vladmihalcea:hibernate-types-52:2.10.2'
     compile 'org.json:json:20201115'
     compile 'org.zalando:problem-spring-web-starter:0.26.2'
     compile 'com.google.guava:guava:23.0'
-    testCompile 'no.nav.security:token-validation-test-support:1.1.5'
+    testCompile 'no.nav.security:token-validation-spring-test:1.3.2'
+    testCompile 'com.squareup.okhttp3:okhttp:4.9.0'
     testCompile 'org.testcontainers:postgresql:1.15.1'
     testCompile 'org.scala-lang:scala-library:2.12.11'
     testCompile 'org.awaitility:awaitility-kotlin:4.0.3'
     testCompile 'com.willowtreeapps.assertk:assertk-jvm:0.23'
     testCompile 'com.ninja-squad:springmockk:2.0.3'
     testCompile 'io.mockk:mockk:1.10.4'
-    testCompile 'no.nav.security:token-validation-spring:1.1.5'
+    testCompile 'no.nav.security:token-validation-spring:1.3.2'
     testCompile 'org.springframework.retry:spring-retry:1.3.0'
     testCompile 'io.springfox:springfox-boot-starter:3.0.0'
-    testCompile 'net.logstash.logback:logstash-logback-encoder:6.5'
-    testCompile 'com.vladmihalcea:hibernate-types-52:2.10.1'
+    testCompile 'net.logstash.logback:logstash-logback-encoder:6.6'
+    testCompile 'com.vladmihalcea:hibernate-types-52:2.10.2'
     testCompile 'org.json:json:20201115'
     testCompile 'org.zalando:problem-spring-web-starter:0.26.2'
     testCompile 'com.google.guava:guava:23.0'
