--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,3 +1,5 @@
+
+
 no.nav:
   apigw:
     apikey: test-key
@@ -12,9 +14,9 @@ no.nav:
     jwt:
       issuer:
         loginservice:
-          discoveryUrl: http://metadata
+          discoveryurl: http://localhost:${mock-oauth2-server.port}/loginservice/.well-known/openid-configuration
           accepted_audience: aud-localhost
-          cookie_name: localhost-idtoken
+          cookie_name: selvbetjening-idtoken
     cors:
       allowed-origins: http://localhost:8080
 
@@ -46,3 +48,5 @@ spring:
       auto-offset-reset: earliest
 wiremock:
   reset-mappings-after-each-test: true
+  server:
+    port: 8888
