Aktiverer konsumering i prod.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -9,7 +9,7 @@ topic:
     omp-utbetaling-snf:
       bryter: false
     omp-utvidet-rett:
-      bryter: false
+      bryter: true
     omp-midlertidig-alene:
       bryter: true
     omd-melding:
