Aktiverer listeners i prod.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -5,9 +5,9 @@ topic:
       bryter: true
       dry-run: false
     omp-utbetaling-arbeidstaker:
-      bryter: false
+      bryter: true
     omp-utbetaling-snf:
-      bryter: false
+      bryter: true
     omp-utvidet-rett:
       bryter: true
     omp-midlertidig-alene:
