Publiserer dittnav melding på ettersending for pleiepenger og omsorgspenger.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,14 @@ no.nav:
       beskjed:
         tekst: 'Søknad om utbetaling av omsorgspenger er mottatt.'
         dagerSynlig: 7
+    k9-ettersending-pp:
+      beskjed:
+        tekst: 'Vi har mottatt din ettersendelse til pleiepenger.'
+        dagerSynlig: 7
+    k9-ettersending-oms:
+      beskjed:
+        tekst: 'Vi har mottatt din ettersendelse til omsorgspenger.'
+        dagerSynlig: 7
 
   apigw:
     apikey: ${APIGW_API_KEY} # kubectl secret som miljøvariabel i pod
@@ -98,6 +106,13 @@ topic:
     omd-melding:
       id: omd-melding-listener
       navn: privat-omsorgsdager-melding-cleanup
+      bryter: true
+      dry-run: false
+
+    # topic.listener.k9-ettersending
+    k9-ettersending:
+      id: k9-ettersending-listener
+      navn: privat-k9-ettersending-cleanup
       bryter: true
       dry-run: false
 
