--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+.DS_Store
 
 ### STS ###
 .apt_generated
@@ -30,3 +31,5 @@ out/
 
 ### VS Code ###
 .vscode/
+
+generated-pdf-*.pdf
