--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,16 +24,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
       - name: Cache
-        uses: actions/cache@v2.1.3
+        uses: actions/cache@v2.1.5
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: 'zulu'
       - name: Test Code
         run: ./gradlew check
 
@@ -46,16 +47,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
       - name: Cache
-        uses: actions/cache@v2.1.3
+        uses: actions/cache@v2.1.5
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: 'zulu'
       - name: Build JAR
         run: ./gradlew clean build -x test # Creates a combined JAR of project and runTime dependencies.
       - name: Build and publish Docker image
