Fikser nullable kafka properties.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -34,6 +34,7 @@ spring:
 
 kafka:
   onprem:
+    servers: placeholder
     consumer:
       retry-interval: 5_000 # Egendefinert property
       group-id: sif-innsyn-api
