Fikser trust-store-location config.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -4,6 +4,10 @@ management:
       show-details: always
 
 spring:
+  kafka:
+    admin:
+      ssl:
+        trust-store-location:
   mvc:
     log-request-details: true
   jpa:
