Konfigurerer opp tilkobling for aiven kafka.
- Setter opp egen consumerFactory for aiven.
- Setter opp egen producerFactory for aiven.
- Setter opp egen kafkatemplate for aiven.
- Setter opp egen listenerContainer for aiven.
- Setter opp egen chainedTransactionManager for aiven.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -43,6 +43,15 @@ kafka:
         trust-store-location: file:${javax.net.ssl.trustStore}
         trust-store-password: ${javax.net.ssl.trustStorePassword}
         trust-store-type: JKS
+  aiven:
+    properties:
+      security:
+        protocol: SSL
+      ssl:
+        truststore-location: file:${javax.net.ssl.trustStore}
+        keystore-location: file:${KAFKA_KEYSTORE_PATH}
+        kredstore-password: ${KAFKA_CREDSTORE_PASSWORD}
+        trust-store-type: JKS
 
 no.nav:
   security.jwt.issuer:
