--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,3 @@
-
-
 no.nav:
   apigw:
     sts-apikey: sts-apikey
@@ -42,6 +40,19 @@ kafka:
     producer:
       client-id: sif-innsyn-api-onprem
       transaction-id-prefix: sif-innsyn-api-onprem.tx.
+
+  aiven:
+    servers: localhost:9092 # placeholder
+    consumer:
+      retry-interval: 5_000 # Egendefinert property
+      group-id: sif-innsyn-api
+      auto-offset-reset: earliest
+    producer:
+      client-id: sif-innsyn-api-aiven
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      transaction-id-prefix: sif-innsyn-api-aiven.tx.
+      retries: 3
 
 wiremock:
   reset-mappings-after-each-test: true
