--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -27,6 +27,16 @@ kafka:
         trust-store-location: file:${javax.net.ssl.trustStore}
         trust-store-password: ${javax.net.ssl.trustStorePassword}
         trust-store-type: JKS
+  aiven:
+    properties:
+      security:
+        protocol: SSL
+      ssl:
+        truststore-location: file:${javax.net.ssl.trustStore}
+        trust-store-type: JKS
+        keystore-location: file:${KAFKA_KEYSTORE_PATH}
+        keystore-password: ${KAFKA_CREDSTORE_PASSWORD}
+        keystore-type: PKCS12
 
 no.nav.security.jwt.issuer:
   loginservice:
