Debugger keystore location config.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -34,7 +34,7 @@ kafka:
       ssl:
         truststore-location: file:${javax.net.ssl.trustStore}
         trust-store-type: JKS
-        keystore-location: file:${KAFKA_KEYSTORE_PATH}
+        keystore-location: ${KAFKA_KEYSTORE_PATH}
         keystore-password: ${KAFKA_CREDSTORE_PASSWORD}
         keystore-type: PKCS12
 
