Legger til trustStorePassword til kafka securityConfig.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -33,6 +33,7 @@ kafka:
         protocol: SSL
       ssl:
         truststore-location: file:${javax.net.ssl.trustStore}
+        trust-store-password: ${javax.net.ssl.trustStorePassword}
         trust-store-type: JKS
         keystore-location: file:${KAFKA_KEYSTORE_PATH}
         keystore-password: ${KAFKA_CREDSTORE_PASSWORD}
