Fikser truststore path
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -32,8 +32,8 @@ kafka:
       security:
         protocol: SSL
       ssl:
-        truststore-location: file:${javax.net.ssl.trustStore}
-        trust-store-password: ${javax.net.ssl.trustStorePassword}
+        truststore-location: file:${KAFKA_TRUSTSTORE_PATH}
+        trust-store-password: ${KAFKA_CREDSTORE_PASSWORD}
         trust-store-type: JKS
         keystore-location: file:${KAFKA_KEYSTORE_PATH}
         keystore-password: ${KAFKA_CREDSTORE_PASSWORD}
