Erstatter property navn for topic og listener.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -119,9 +119,9 @@ topic:
       bryter: true
       dry-run: false
 
-    # topic.listener.omp-aleneomsorg
-    omp-aleneomsorg:
-      id: omsorgspenger-aleneomsorg
+    # topic.listener.omd-aleneomsorg
+    omd-aleneomsorg:
+      id: omsorgsdager-aleneomsorg
       navn: dusseldorf.privat-omsorgsdager-aleneomsorg-cleanup
       bryter: true
       dry-run: false
