--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -123,7 +123,7 @@ topic:
     omd-aleneomsorg:
       id: omsorgsdager-aleneomsorg
       navn: dusseldorf.privat-omsorgsdager-aleneomsorg-cleanup
-      bryter: false
+      bryter: true
       dry-run: false
 
 management:
