Fjerner transaksjonoppsett for kafka-aiven.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -121,9 +121,9 @@ topic:
 
     # topic.listener.omd-aleneomsorg
     omd-aleneomsorg:
-      id: omsorgsdager-aleneomsorg
+      id: omsorgsdager-aleneomsorg-listener
       navn: dusseldorf.privat-omsorgsdager-aleneomsorg-cleanup
-      bryter: true
+      bryter: false
       dry-run: false
 
 management:
