Manuelt oppsett av kafka.
- Går bort fra autokonfigurasjon av kafka via spring til manuelt oppsett.
- Refaktorer litt mtp. utvidelse for oppsett av aiven kafka.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -166,12 +166,8 @@ kafka:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
     producer:
-      client-id: ${spring.application.name}
+      client-id: ${HOSTNAME}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: ${spring.application.name}.tx.
-
-  aiven:
-    servers: ${KAFKA_BROKERS}
-    consumer:
-    producer:
+      transaction-id-prefix: ${HOSTNAME}.tx-
+      retries: 3
