--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -22,6 +22,7 @@ kafka:
       ssl:
         trust-store-location: file:${javax.net.ssl.trustStore}
         trust-store-password: ${javax.net.ssl.trustStorePassword}
+        trust-store-type: JKS
 
 no.nav.security.jwt.issuer:
   loginservice:
