Overstyrer kafka bootstrap servers fra nais variabel fil.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -155,7 +155,7 @@ spring:
 
 kafka:
   onprem:
-    servers: ${ONPREM_KAFKA_BOOTSTRAP_SERVERS}
+    servers: # overstyres fra nais/<cluster>.json
     consumer:
       enable-auto-commit: false
       group-id: ${spring.application.name}
