Manuelt oppsett av kafka (#102)
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -153,21 +153,21 @@ spring:
     password: ${NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
-  kafka:
-    #bootstrap-servers: # Settes i nais/<cluster>.json
-    producer:
-      client-id: ${spring.application.name}
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: ${spring.application.name}.tx.
+kafka:
+  onprem:
+    servers: # overstyres fra nais/<cluster>.json
     consumer:
       enable-auto-commit: false
       group-id: ${spring.application.name}
-      auto-offset-reset: latest
+      auto-offset-reset:  # overstyres fra nais/<cluster>.json
       isolation-level: read_committed
       retry-interval: 60_000 # Egendefinert property
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      ssl:
-        trust-store-location: file:${javax.net.ssl.trustStore}
-        trust-store-password: ${javax.net.ssl.trustStorePassword}
+
+    producer:
+      client-id: ${HOSTNAME}
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      transaction-id-prefix: ${HOSTNAME}.tx-
+      retries: 3
