--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,3 @@
-
-
 no.nav:
   apigw:
     sts-apikey: sts-apikey
@@ -20,7 +18,7 @@ no.nav:
       allowed-origins: http://localhost:8080
 
   metrics:
-    interval: 5
+    interval: 36000
 
 spring:
   datasource:
@@ -31,18 +29,19 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
-  kafka:
-    producer:
-      client-id: sif-innsyn-api
-      retries: 3
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+kafka:
+  onprem:
+    servers: localhost:9092 # placeholder
     consumer:
       retry-interval: 5_000 # Egendefinert property
-      group-id: group_id
-      #client-id: sif-innsyn-api
+      group-id: sif-innsyn-api-onprem
       auto-offset-reset: earliest
+    producer:
+      client-id: sif-innsyn-api-onprem
+      transaction-id-prefix: sif-innsyn-api-onprem.tx.
+
 wiremock:
   reset-mappings-after-each-test: true
   server:
-    port: 8888
+    port: 0 # random port
