Skrur på omsorgsdager-aleneomsorg-listener
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -123,7 +123,7 @@ topic:
     omd-aleneomsorg:
       id: omsorgsdager-aleneomsorg-listener
       navn: dusseldorf.privat-omsorgsdager-aleneomsorg-cleanup
-      bryter: false
+      bryter: true
       dry-run: false
 
 management:
