Overstyrer aiven kafka.auto.offset.reset
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -188,7 +188,7 @@ kafka:
     consumer:
       enable-auto-commit: false
       group-id: ${spring.application.name}
-      auto-offset-reset: latest
+      auto-offset-reset: # overstyres fra nais/<cluster>.json
       isolation-level: read_committed
       retry-interval: 60_000 # Egendefinert property
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
