--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -28,12 +28,12 @@ kafka:
       security:
         protocol: SSL
       ssl:
-        truststore-location: file:${KAFKA_TRUSTSTORE_PATH}
+        trust-store-location: file:${KAFKA_TRUSTSTORE_PATH}
         trust-store-password: ${KAFKA_CREDSTORE_PASSWORD}
         trust-store-type: JKS
-        keystore-location: file:${KAFKA_KEYSTORE_PATH}
-        keystore-password: ${KAFKA_CREDSTORE_PASSWORD}
-        keystore-type: PKCS12
+        key-store-location: file:${KAFKA_KEYSTORE_PATH}
+        key-store-password: ${KAFKA_CREDSTORE_PASSWORD}
+        key-store-type: PKCS12
 
 no.nav.security.jwt.issuer:
   loginservice:
