Fikser prod-gcp profil.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -48,10 +48,12 @@ kafka:
       security:
         protocol: SSL
       ssl:
-        truststore-location: file:${javax.net.ssl.trustStore}
-        keystore-location: file:${KAFKA_KEYSTORE_PATH}
-        kredstore-password: ${KAFKA_CREDSTORE_PASSWORD}
+        trust-store-location: file:${KAFKA_TRUSTSTORE_PATH}
+        trust-store-password: ${KAFKA_CREDSTORE_PASSWORD}
         trust-store-type: JKS
+        key-store-location: file:${KAFKA_KEYSTORE_PATH}
+        key-store-password: ${KAFKA_CREDSTORE_PASSWORD}
+        key-store-type: PKCS12
 
 no.nav:
   security.jwt.issuer:
