Konfigurerer opp tilkobling for aiven kafka. (#101)
* Konfigurerer opp tilkobling for aiven kafka.

- Setter opp egen consumerFactory for aiven.
- Setter opp egen producerFactory for aiven.
- Setter opp egen kafkatemplate for aiven.
- Setter opp egen listenerContainer for aiven.
- Setter opp egen chainedTransactionManager for aiven.

* Setter kafka.auto.offset.reset til latest for aiven og onprem

* Erstatter Nav-CallId med correlation_id.

* Refaktorerer pakkestruktur for konsumenter.

* Bumper opp spring-boot til 2.5.1

Closes #110

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

Co-authored-by: Sander Opperud Odden <sander.opperud.odden@nav.no>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -169,5 +169,23 @@ kafka:
       client-id: ${HOSTNAME}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: ${HOSTNAME}.tx-
+      transaction-id-prefix: .tx-
+      retries: 3
+
+  aiven:
+    servers: ${KAFKA_BROKERS}
+    consumer:
+      enable-auto-commit: false
+      group-id: ${spring.application.name}
+      auto-offset-reset: # overstyres fra nais/<cluster>.json
+      isolation-level: read_committed
+      retry-interval: 60_000 # Egendefinert property
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+    producer:
+      client-id: ${HOSTNAME}
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      transaction-id-prefix: .tx-
       retries: 3
