--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -23,6 +23,17 @@ kafka:
         trust-store-location: file:${javax.net.ssl.trustStore}
         trust-store-password: ${javax.net.ssl.trustStorePassword}
         trust-store-type: JKS
+  aiven:
+    properties:
+      security:
+        protocol: SSL
+      ssl:
+        trust-store-location: file:${KAFKA_TRUSTSTORE_PATH}
+        trust-store-password: ${KAFKA_CREDSTORE_PASSWORD}
+        trust-store-type: JKS
+        key-store-location: file:${KAFKA_KEYSTORE_PATH}
+        key-store-password: ${KAFKA_CREDSTORE_PASSWORD}
+        key-store-type: PKCS12
 
 no.nav.security.jwt.issuer:
   loginservice:
