--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -53,7 +53,15 @@ kafka:
       auto-offset-reset: earliest
     producer:
       client-id: sif-innsyn-api-onprem
-      transaction-id-prefix: .tx-
+
+  aiven:
+    servers: localhost:9092 # placeholder
+    consumer:
+      retry-interval: 5_000 # Egendefinert property
+      group-id: sif-innsyn-api-aiven
+      auto-offset-reset: earliest
+    producer:
+      client-id: sif-innsyn-api-aiven
 
 wiremock:
   reset-mappings-after-each-test: true
