--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -39,3 +39,12 @@ no.nav.security.jwt.issuer:
   loginservice:
     discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
     accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+
+topic:
+  listener:
+    # topic.listener.dok-journalfoering-v1
+    dok-journalfoering-v1:
+      id: dok-journalfoering-v1-listener
+      navn: aapen-dok-journalfoering-v1-q1
+      bryter: true
+      dry-run: false
