--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -115,6 +115,13 @@ topic:
       bryter: true
       dry-run: false
 
+    # topic.listener.dok-journalfoering-v1
+    dok-journalfoering-v1:
+      id: dok-journalfoering-v1-listener
+      navn: aapen-dok-journalfoering-v1-p
+      bryter: true
+      dry-run: false
+
 management:
   endpoints:
     web:
@@ -164,6 +171,7 @@ kafka:
       retry-interval: 60_000 # Egendefinert property
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      schemaRegistryUrl: # overstyres fra nais/<cluster>.json
 
     producer:
       client-id: ${HOSTNAME}
@@ -182,6 +190,7 @@ kafka:
       retry-interval: 60_000 # Egendefinert property
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      schemaRegistryUrl: ${KAFKA_SCHEMA_REGISTRY}
 
     producer:
       client-id: ${HOSTNAME}
