--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -14,6 +14,8 @@ topic:
       bryter: true
     k9-ettersending:
       bryter: true
+    dok-journalfoering-v1:
+      bryter: true
 
 management:
   endpoint:
