Konsumerer, lagrer, varsler dittnav for meldinger om ettersendelse.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -4,6 +4,8 @@ topic:
     pp-sykt-barn:
       bryter: true
       dry-run: false
+    k9-ettersending:
+      bryter: true
     dok-journalfoering-v1:
       bryter: true
 
