--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -12,6 +12,8 @@ spec:
     application:
       enabled: true
       tenant: {{azureTenant}}
+  tokenx:
+    enabled: true
   accessPolicy:
     inbound:
       rules:
