--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,6 +15,17 @@ no.nav:
           discoveryurl: http://localhost:${mock-oauth2-server.port}/loginservice/.well-known/openid-configuration
           accepted_audience: aud-localhost
           cookie_name: selvbetjening-idtoken
+      client:
+        registration:
+          tokenx-safselvbetjening:
+            token-endpoint-url: http://localhost:8080/default/token
+            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+            authentication:
+              client-auth-method: private_key_jwt
+              client-id: "dev-gcp:dusseldorf:sif-innsyn-api"
+              client-jwk: src/test/resources/tokenx-jwk.json
+            token-exchange:
+              audience: dev-fss:teamdokumenthandtering:safselvbetjening
     cors:
       allowed-origins: http://localhost:8080
 
