Refaktorerer ut tokending url som miljøvariabel.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -43,7 +43,7 @@ no.nav.security.jwt:
   client:
     registration:
       tokenx-safselvbetjening:
-        token-endpoint-url: https://tokendings.dev-gcp.nais.io/token
+        token-endpoint-url: ${TOKENDINGS_BASE_URL}/token
         grant-type: urn:ietf:params:oauth:grant-type:token-exchange
         authentication:
           client-auth-method: private_key_jwt
