Konsumerer PP søknad fra Aiven. Fikser topicnavn og bruker aivenKafkaJsonListenerContainerFactory

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ topic:
     # topic.listener.pp-sykt-barn
     pp-sykt-barn:
       id: pp-sykt-barn-listener
-      navn: privat-pleiepengesoknad-cleanup
+      navn: dusseldorf.privat-pleiepengesoknad-cleanup
       bryter: true
       dry-run: false
 
