--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -26,6 +26,16 @@ no.nav:
               client-jwk: src/test/resources/tokenx-jwk.json
             token-exchange:
               audience: dev-fss:teamdokumenthandtering:safselvbetjening
+
+          tokenx-k9-sak-innsyn-api:
+            token-endpoint-url: http://localhost:8080/default/token
+            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+            authentication:
+              client-auth-method: private_key_jwt
+              client-id: "dev-gcp:dusseldorf:sif-innsyn-api"
+              client-jwk: src/test/resources/tokenx-jwk.json
+            token-exchange:
+              audience: dev-gcp:dusseldorf:k9-sak-innsyn-api
     cors:
       allowed-origins: http://localhost:8080
 
