Tillater innkommende kall fra pleiepengesoknad-api.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -18,6 +18,7 @@ spec:
     inbound:
       rules:
         - application: sif-innsyn
+        - application: pleiepengesoknad-api
     outbound:
       external:
         {{#each externalHosts as |host|}}
