Legger til dokumentoversikt på SøknadDTO.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,6 +58,8 @@ topic:
       bryter: true
       dry-run: false
 
+application-ingress: ${APPLICATION_INGRESS}
+
 management:
   endpoints:
     web:
