Resetter sak-id på søknader.
Da det ikke var satt filtrering på fagsaksystem, har mange sakId-er blitt overskrevet fra andre fagsaksystemer enn k9.
Denne fiksen henter alle søknader med sakId-er og resetter dem.
Konsumering fra joark disablees og setter auto offset reset til earliest for å konsumere dem på nytt.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,7 +54,7 @@ topic:
     dok-journalfoering-v1:
       id: dok-journalfoering-v1-listener
       navn: aapen-dok-journalfoering-v1-p
-      bryter: true
+      bryter: false
       dry-run: false
 
 management:
