Skrur på konsumering av joarkhendelser i dev.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -69,5 +69,5 @@ topic:
     dok-journalfoering-v1:
       id: dok-journalfoering-v1-listener
       navn: aapen-dok-journalfoering-v1-q1
-      bryter: false
+      bryter: true
       dry-run: false
