Kjører i prod med dryRun for å få riktig offst.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -6,6 +6,7 @@ topic:
       dry-run: false
     k9-ettersending:
       bryter: true
+      dry-run: true
     dok-journalfoering-v1:
       bryter: true
 
