Konsumerer, lagrer, varsler dittnav for meldinger om ettersendelse. (#175)
* Konsumerer, lagrer, varsler dittnav for meldinger om ettersendelse.

* Henter kun søknader om pleiepenger og ettersendelser om pleiepenger.

* Kjører i prod med dryRun for å få riktig offset.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

Co-authored-by: SanderOpperud <60642441+sanderopperud@users.noreply.github.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -4,6 +4,9 @@ topic:
     pp-sykt-barn:
       bryter: true
       dry-run: false
+    k9-ettersending:
+      bryter: true
+      dry-run: true
     dok-journalfoering-v1:
       bryter: true
 
